# ray-tracer

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
canvas/: Cargo.toml
canvas/src/: color.rs  lib.rs
examples/: 1_virtual_projectiles.rs  2_projectile_to_file.rs  3_clock.rs  4_casting_rays_on_sphere.rs  5_reflections_at_sphere.rs  casting_rays_on_sphere.rs  clock.rs  projectile_to_file.rs  reflections_at_sphere.rs  virtual_projectiles.rs
examples/virtual_projectiles/: Cargo.toml
examples/virtual_projectiles/src/: main.rs
src/: canvas.rs  color.rs  intersections.rs  lib.rs  light.rs  main.rs  material.rs  matrix.rs  ray.rs  rays.rs  serialize.rs  shape.rs  sphere.rs  transformations.rs  tuple.rs  utils.rs  world.rs
src/intersections/: computations.rs  intersection.rs
tuple/: Cargo.toml
tuple/src/: lib.rs
