[package]
name = "tuple"
version = "0.1.0"
authors = ["ueco <ueco@libertymail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.3", default-features = false }
num-traits = { version = "0.2", default-features = false }
